--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
+    <div class="container">
       <a class="navbar-brand" href="#">Marlon</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -58,12 +58,13 @@
     <div class="row home-section-1">
       <div class="col-lg-6">
         <h1 class="home-text">Hi, <br> I'am <span class="home-text-2">Marlon</span><br> Web Designer </h1>
+        <br>
+          <button type="button" class="btn btn-light">Contact</button>
       </div>
 
       <div class="col-lg-6">
-
+        <img src="assets/img/perfil.png" class="home-circle" alt="home-img">
       </div>
-
     </div>
   </div>
 
