--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
+  <!-- Box icons -->
+  <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+
+
+
   <link rel="stylesheet" href="assets/css/styles.css">
 
 </head>
@@ -60,6 +65,13 @@
         <h1 class="home-text">Hi, <br> I'am <span class="home-text-2">Marlon</span><br> Web Designer </h1>
         <br>
           <button type="button" class="btn btn-light">Contact</button>
+        <br>
+        <br>
+        <div class="home-social">
+          <a href="#" class="home-social-icon"><i class='bx bxl-linkedin bx-sm'></i></a>
+          <a href="#" class="home-social-icon"><i class='bx bxl-behance bx-sm'></i></a>
+          <a href="#" class="home-social-icon"><i class='bx bxl-meta bx-sm'></i></a>
+        </div>
       </div>
 
       <div class="col-lg-6">
