--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" href="#home">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="#about">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Skills</a>
@@ -59,7 +59,7 @@
   </nav>
 
 <!-- First section -->
-  <div class="container-fluid">
+  <div class="container-fluid" id="home">
     <div class="row home-section-1">
       <div class="col-lg-6">
         <h1 class="home-text">Hi, <br> I'am <span class="home-text-2">Marlon</span><br> Web Designer </h1>
@@ -79,6 +79,23 @@
       </div>
     </div>
   </div>
+
+
+<!-- Second section   -->
+<div class="container-fluid" id="about">
+  <h1 class="about-head-text">About</h1>
+  <div class="row about-section">
+    <div class="col-lg-6">
+      <img src="assets/img/about.jpg" class="about-img" alt="">
+    </div>
+
+    <div class="col-lg-6" id="section">
+      <h1>I'am Marlon</h1>
+      <p class="about-paragraph">In omnes quodsi nec, accumsan consectetuer ut mel. Ponderum postulant qualisque an nam, no nam novum dicit accusata, no has tale lorem voluptua. An solum posse tacimates usu, utinam facilis voluptatibus sea in, mea cu exerci graece putent. Graece ancillae tacimates ne mei, an per laudem feugait tacimates. Eam an nemore accumsan maiestatis, omnes omnesque menandri vis no, mel ex zril latine. Ei alia voluptua consulatu mea. Audiam iuvaret insolens ex mei, sed ut ponderum consequat reprimique, habeo denique ad vel.</p>
+    </div>
+  </div>
+
+</div>
 
   <!-- MAIN JS -->
   <script src="assets/js/main.js" charset="utf-8"></script>
