--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <a class="nav-link" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Skills</a>
+            <a class="nav-link" href="#skills">Skills</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Work</a>
@@ -58,13 +58,13 @@
     </div>
   </nav>
 
-<!-- First section -->
+  <!-- First section -->
   <div class="container-fluid" id="home">
     <div class="row home-section-1">
       <div class="col-lg-6">
         <h1 class="home-text">Hi, <br> I'am <span class="home-text-2">Marlon</span><br> Web Designer </h1>
         <br>
-          <button type="button" class="btn btn-light">Contact</button>
+        <button type="button" class="btn btn-light">Contact</button>
         <br>
         <br>
         <div class="home-social">
@@ -81,22 +81,87 @@
   </div>
 
 
-<!-- Second section   -->
-<div class="container-fluid" id="about">
-  <h1 class="about-head-text">About</h1>
-  <div class="row about-section">
-    <div class="col-lg-6">
-      <img src="assets/img/about.jpg" class="about-img" alt="">
+  <!-- About section   -->
+  <div class="container-fluid" id="about">
+    <h1 class="about-head-text">About</h1>
+    <div class="row about-section">
+      <div class="col-lg-6">
+        <img src="assets/img/about.jpg" class="about-img" alt="">
+      </div>
+
+      <div class="col-lg-6" id="about-column">
+        <h1>I'am Marlon</h1>
+        <p class="about-paragraph">In omnes quodsi nec, accumsan consectetuer ut mel. Ponderum postulant qualisque an nam, no nam novum dicit accusata, no has tale lorem voluptua. An solum posse tacimates usu, utinam facilis voluptatibus sea in, mea
+          cu exerci graece putent. Graece ancillae tacimates ne mei, an per laudem feugait tacimates. Eam an nemore accumsan maiestatis, omnes omnesque menandri vis no, mel ex zril latine. Ei alia voluptua consulatu mea.</p>
+      </div>
     </div>
 
-    <div class="col-lg-6" id="section">
-      <h1>I'am Marlon</h1>
-      <p class="about-paragraph">In omnes quodsi nec, accumsan consectetuer ut mel. Ponderum postulant qualisque an nam, no nam novum dicit accusata, no has tale lorem voluptua. An solum posse tacimates usu, utinam facilis voluptatibus sea in, mea cu exerci graece putent. Graece ancillae tacimates ne mei, an per laudem feugait tacimates. Eam an nemore accumsan maiestatis, omnes omnesque menandri vis no, mel ex zril latine. Ei alia voluptua consulatu mea. Audiam iuvaret insolens ex mei, sed ut ponderum consequat reprimique, habeo denique ad vel.</p>
-    </div>
   </div>
 
-</div>
 
+  <!-- Skills section -->
+  <div class="container-fluid" id="skills">
+    <h1 class="skills-head-text">Skills</h1>
+    <div class="row skills-section">
+      <div class="col-lg-6">
+        <h1>Professional Skills</h1>
+        <p>In omnes quodsi nec, accumsan consectetuer ut mel. Ponderum postulant qualisque an nam, no nam novum dicit accusata, no has tale lorem voluptua.</p>
+
+        <div class="skills-data">
+          <div class="">
+            <i class='bx bxl-html5 bx-md skills-icon'></i>
+            <span class="skills_name">HTML5</span>
+          </div>
+
+          <div>
+            <span class="skills_percentage">95%</span>
+          </div>
+          <div class="skills-bar skills-html"></div>
+        </div>
+
+        <div class="skills-data">
+          <div class="skills-name">
+            <i class='bx bxl-css3 bx-md skills-icon'></i>
+            <span class="skills_name">CSS3</span>
+          </div>
+
+          <div>
+            <span class="skills_percentage">85%</span>
+          </div>
+          <div class="skills-bar skills-css"></div>
+        </div>
+
+        <div class="skills-data">
+          <div class="skills-name">
+            <i class='bx bxl-javascript bx-md skills-icon' ></i>
+            <span class="skills_name">JAVASCRIPT</span>
+          </div>
+
+          <div>
+            <span class="skills_percentage">65%</span>
+          </div>
+          <div class="skills-bar skills-javascript"></div>
+        </div>
+
+        <div class="skills-data">
+          <div class="skills-name">
+            <i class='bx bxs-paint bx-md skills-icon' ></i>
+            <span class="skills_name">UX/UI</span>
+          </div>
+
+          <div>
+            <span class="skills_percentage">85%</span>
+          </div>
+          <div class="skills-bar skills-ui-ux"></div>
+        </div>
+
+      </div>
+
+      <div class="col-lg-6">
+        <img src="assets/img/work3.jpg" class="skills-img" alt=""> 
+      </div>
+    </div>
+  </div>
   <!-- MAIN JS -->
   <script src="assets/js/main.js" charset="utf-8"></script>
 </body>
