--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <a class="nav-link" href="#skills">Skills</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Work</a>
+            <a class="nav-link" href="#work">Work</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Contact</a>
@@ -133,7 +133,7 @@
 
         <div class="skills-data">
           <div class="skills-name">
-            <i class='bx bxl-javascript bx-md skills-icon' ></i>
+            <i class='bx bxl-javascript bx-md skills-icon'></i>
             <span class="skills_name">JAVASCRIPT</span>
           </div>
 
@@ -145,7 +145,7 @@
 
         <div class="skills-data">
           <div class="skills-name">
-            <i class='bx bxs-paint bx-md skills-icon' ></i>
+            <i class='bx bxs-paint bx-md skills-icon'></i>
             <span class="skills_name">UX/UI</span>
           </div>
 
@@ -158,10 +158,41 @@
       </div>
 
       <div class="col-lg-6">
-        <img src="assets/img/work3.jpg" class="skills-img" alt=""> 
+        <img src="assets/img/work3.jpg" class="skills-img" alt="">
       </div>
     </div>
   </div>
+
+  <!-- Work section -->
+  <div class="container-fluid" id="work">
+    <h1 class="work-head-text">Work</h1>
+    <div class="row work-section">
+      <div class="col-lg-4 work-container">
+        <img src="assets/img/work1.jpg" class="work-img" width="320px" alt="">
+      </div>
+
+      <div class="col-lg-4 work-container">
+        <img src="assets/img/work2.jpg" class="work-img" width="320px" alt="">
+      </div>
+
+      <div class="col-lg-4 work-container">
+        <img src="assets/img/work3.jpg" class="work-img" width="320px" alt="">
+      </div>
+
+      <div class="col-lg-4 work-container">
+        <img src="assets/img/work4.jpg" class="work-img" width="320px" alt="">
+      </div>
+
+      <div class="col-lg-4 work-container">
+        <img src="assets/img/work5.jpg" class="work-img" width="320px" alt="">
+      </div>
+
+      <div class="col-lg-4 work-container">
+        <img src="assets/img/work6.jpg" class="work-img" width="320px" alt="">
+      </div>
+    </div>
+  </div>
+
   <!-- MAIN JS -->
   <script src="assets/js/main.js" charset="utf-8"></script>
 </body>
