--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <a class="nav-link" href="#work">Work</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="#contact">Contact</a>
           </li>
         </ul>
       </div>
@@ -191,6 +191,11 @@
         <img src="assets/img/work6.jpg" class="work-img" width="320px" alt="">
       </div>
     </div>
+  </div>
+
+  <!-- Contact section -->
+  <div class="container-fluid" id="contact">
+    <h1 class="contact-head-text">Contact</h1>
   </div>
 
   <!-- MAIN JS -->
