--- a/index.html
+++ b/index.html
@@ -197,7 +197,8 @@
   <div class="container-fluid" id="contact">
     <h1 class="contact-head-text">Contact</h1>
   </div>
-
+<!-- Scroll button -->
+<button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
   <!-- MAIN JS -->
   <script src="assets/js/main.js" charset="utf-8"></script>
 </body>
