--- a/index.html
+++ b/index.html
@@ -196,9 +196,41 @@
   <!-- Contact section -->
   <div class="container-fluid" id="contact">
     <h1 class="contact-head-text">Contact</h1>
+    <div class="row contact-section">
+      <div class="col-lg-3"></div>
+
+      <div class="col-lg-6">
+        <div class="">
+          <form id="contactForm">
+            <div class="mb-3">
+              <label class="form-label" for="name">Name</label>
+              <input class="form-control" id="name" type="text" placeholder="Name" required autofocus />
+            </div>
+
+            <div class="mb-3">
+              <label class="form-label" for="emailAddress">Email Address</label>
+              <input class="form-control" id="emailAddress" type="email" placeholder="Email Address" required />
+            </div>
+
+            <div class="mb-3">
+              <label class="form-label" for="message">Message</label>
+              <textarea class="form-control" id="message" type="text" placeholder="Message" required style="height: 10rem;"></textarea>
+            </div>
+
+            <div class="d-grid">
+              <button class="btn btn-primary " type="submit">Submit</button>
+            </div>
+
+          </form>
+
+        </div>
+      </div>
+
+      <div class="col-lg-3"></div>
+    </div>
   </div>
-<!-- Scroll button -->
-<button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+  <!-- Scroll button -->
+  <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
   <!-- MAIN JS -->
   <script src="assets/js/main.js" charset="utf-8"></script>
 </body>
