--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
       </div>
 
       <div class="col-lg-6" id="about-column">
-        <h1>I'am Marlon</h1>
+        <h1 class="about-head">I'am Marlon</h1>
         <p class="about-paragraph">In omnes quodsi nec, accumsan consectetuer ut mel. Ponderum postulant qualisque an nam, no nam novum dicit accusata, no has tale lorem voluptua. An solum posse tacimates usu, utinam facilis voluptatibus sea in, mea
-          cu exerci graece putent. Graece ancillae tacimates ne mei, an per laudem feugait tacimates. Eam an nemore accumsan maiestatis, omnes omnesque menandri vis no, mel ex zril latine. Ei alia voluptua consulatu mea.</p>
+          cu exerci graece putent. Graece ancillae tacimates ne mei, an per laudem feugait tacimates. Eam an nemore accumsan maiestatis, omnes omnesque menandri vis no, mel ex zril latine.</p>
       </div>
     </div>
 
@@ -104,7 +104,7 @@
     <h1 class="skills-head-text">Skills</h1>
     <div class="row skills-section">
       <div class="col-lg-6">
-        <h1>Professional Skills</h1>
+        <h1 class="skills-head">Professional Skills</h1>
         <p>In omnes quodsi nec, accumsan consectetuer ut mel. Ponderum postulant qualisque an nam, no nam novum dicit accusata, no has tale lorem voluptua.</p>
 
         <div class="skills-data">
@@ -204,7 +204,7 @@
           <form id="contactForm">
             <div class="mb-3">
               <label class="form-label" for="name">Name</label>
-              <input class="form-control" id="name" type="text" placeholder="Name" required autofocus />
+              <input class="form-control" id="name" type="text" placeholder="Name" required />
             </div>
 
             <div class="mb-3">
