--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <div class="row skills-section">
       <div class="col-lg-6">
         <h1 class="skills-head">Professional Skills</h1>
-        <p>In omnes quodsi nec, accumsan consectetuer ut mel. Ponderum postulant qualisque an nam, no nam novum dicit accusata, no has tale lorem voluptua.</p>
+        <p class="skills-paragraph">In omnes quodsi nec, accumsan consectetuer ut mel. Ponderum postulant qualisque an nam, no nam novum dicit accusata, no has tale lorem voluptua.</p>
 
         <div class="skills-data">
           <div class="">
