--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
   <!-- Box icons -->
   <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
 
+<!-- Scroll reveal cdn -->
+<script src="https://unpkg.com/scrollreveal"></script>
 
 
   <link rel="stylesheet" href="assets/css/styles.css">
@@ -201,7 +203,7 @@
 
       <div class="col-lg-6">
         <div class="">
-          <form id="contactForm">
+          <form class="contactForm" id="contactForm">
             <div class="mb-3">
               <label class="form-label" for="name">Name</label>
               <input class="form-control" id="name" type="text" placeholder="Name" required />
